--- a/sass/responsive/_mobile.scss
+++ b/sass/responsive/_mobile.scss
@@ -31,5 +31,20 @@
       }
     }
   }
+  .form_sign .collection .content label.box {
+    width: 52%;
+  }
+  .form_sign .collection .content {
+    justify-content: center;
+  }
+  .form_sign .input-group .form-control {
+    padding-inline-start: 12%;
+  }
+  .form_sign p.term {
+    font-size: 0.8rem;
+  }
+  footer .footer-bottom .socialicon {
+    justify-content: center;
+  }
 }
 /* ======= Mobile ======= */
