--- a/sass/style.scss
+++ b/sass/style.scss
@@ -35,6 +35,9 @@ body {
 ul {
   padding: 0;
 }
+a {
+  text-decoration: none;
+}
 .swal2-title {
   font-family: "semibold";
 }
@@ -97,6 +100,283 @@ ul {
   }
 }
 // End header
+
+//start breadcrumb
+.braedcrumb {
+  padding: 3% 0;
+  position: relative;
+  text-align: start;
+  background-color: #f7f7f7;
+  .content {
+    svg {
+      color: $SecondText;
+      font-size: 1.5rem;
+      margin-inline-end: 4%;
+    }
+    span,
+    a {
+      font-size: 1rem;
+      color: $PrimaryText;
+      font-family: "semibold";
+    }
+  }
+}
+//finish breadcrumb
+//start form sign
+.form_sign {
+  border: 1px solid #bdbdbd;
+  border-radius: 5px;
+  margin: 9% 0;
+  padding: 6% 4%;
+  h5 {
+    margin-bottom: 4%;
+    font-size: 1.2rem;
+    font-family: "bold";
+    color: $PrimaryText;
+  }
+  .collection {
+    .content {
+      display: flex;
+      flex-direction: row;
+      flex-wrap: wrap;
+      label.box {
+        width: 31%;
+        margin: 1%;
+        background: white;
+        color: var(--color-secound);
+        margin-top: 12px;
+        padding: 10px 5px;
+        display: flex;
+        border-radius: 5px;
+        border: 1px solid #000;
+        cursor: pointer;
+        transition: all 0.25s ease;
+        padding: 2% 1%;
+        .plan {
+          display: flex;
+          width: 100%;
+          padding: 1%;
+          align-items: center;
+          justify-content: space-between;
+          flex-direction: row;
+          .text {
+            display: flex;
+            justify-content: space-between;
+            flex-direction: row;
+            align-items: center;
+            width: 100%;
+            img {
+              width: 20px;
+              height: 20px;
+            }
+            p {
+              // margin-top: 1%;
+              // margin-right: 2%;
+              margin-bottom: 0;
+              color: $PrimaryText;
+              font-size: 0.8rem;
+              font-family: "regular";
+            }
+          }
+        }
+      }
+      #one:checked ~ label.first,
+      #two:checked ~ label.two,
+      #three:checked ~ label.three {
+        border-color: #b63131;
+      }
+      input[type="radio"] {
+        display: none;
+      }
+    }
+  }
+  .or {
+    font-size: 1rem;
+    color: $SecondText;
+    text-align: center;
+    position: relative;
+    font-family: "light";
+    margin: 3% 0;
+    &::after {
+      content: "";
+      top: 12px;
+      left: 0;
+      background-color: #bdbdbd;
+      color: #bdbdbd;
+      width: 45%;
+      height: 2px;
+      position: absolute;
+    }
+    &::before {
+      content: "";
+      position: absolute;
+      top: 12px;
+      right: 0;
+      background-color: #bdbdbd;
+      color: #bdbdbd;
+      width: 45%;
+      height: 2px;
+    }
+  }
+  .input-group {
+    margin: 5% 0;
+    position: relative;
+    .btn {
+      width: 50%;
+      background-color: $PrimaryColor;
+      color: white;
+      font-family: "regular";
+      font-size: 1.2rem;
+      border-radius: 5px;
+      padding: 1%;
+      transition: 0.25s all ease-in-out;
+      border: 1px solid $PrimaryColor;
+      &:hover {
+        background-color: white;
+        color: $PrimaryColor;
+      }
+    }
+    .form-control {
+      border: 1px solid #c2c2c2;
+      border-radius: 5px;
+      font-family: "regular";
+      color: $PrimaryText;
+      padding-inline-start: 9%;
+      border-top-right-radius: 5px !important;
+      border-bottom-right-radius: 5px !important;
+    }
+    .icon_form {
+      position: absolute;
+      top: 6px;
+      left: 18px;
+      color: $SecondText;
+      z-index: 1000;
+    }
+  }
+  p.term {
+    font-size: 1.1rem;
+    font-family: "regular";
+    color: $PrimaryText;
+    margin: 3% 0;
+    a {
+      color: $PrimaryColor;
+    }
+  }
+  p.login {
+    font-size: 1.1rem;
+    font-family: "regular";
+    color: $PrimaryText;
+    margin-top: 6%;
+    text-align: center;
+    padding-top: 6%;
+    border-top: 1px solid #c2c2c2;
+    a {
+      color: $PrimaryColor;
+    }
+  }
+}
+//finish form sign
+
+//start single blog
+.single_blog {
+  padding: 5% 0;
+  position: relative;
+  .content_blog {
+    h2 {
+      font-size: 2rem;
+      color: $PrimaryText;
+      font-family: "semibold";
+    }
+    h5 {
+      font-size: 1.2rem;
+      color: $SecondText;
+      font-family: "regular";
+    }
+    img {
+      width: 100%;
+      height: 350px;
+      margin: 3% 0;
+    }
+    p {
+      font-size: 1rem;
+      color: $SecondText;
+      font-family: "regular";
+      line-height: 1.2;
+    }
+  }
+  .sidebar_blog {
+    .simallair_hrader {
+      background-color: #f5f5f5;
+      font-family: "semibold";
+      color: $PrimaryText;
+      font-size: 1.2rem;
+      padding: 4% 0;
+      margin-bottom: 4%;
+      text-align: center;
+      border-radius: 4px;
+    }
+    .box {
+      margin-bottom: 6%;
+      border: 1px solid #c1c1c1;
+      padding-bottom: 5%;
+      img {
+        width: 100%;
+        height: 200px;
+      }
+      .info {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-around;
+        margin: 4% 2% 6%;
+        padding: 3% 0 6%;
+        border-bottom: 1px solid #c1c1c1;
+        .date {
+          display: flex;
+          flex-direction: row;
+          align-items: center;
+          width: 45%;
+          svg {
+            color: $PrimaryColor;
+            font-size: 0.9rem;
+          }
+          span {
+            color: $PrimaryText;
+            font-size: 0.8rem;
+            font-family: "regular";
+            padding-inline-start: 7%;
+          }
+        }
+      }
+      h4 {
+        font-size: 1rem;
+        color: $PrimaryText;
+        font-family: "bold";
+        margin: 4% 0 2%;
+        padding: 0 3%;
+      }
+      p {
+        font-size: 0.8rem;
+        color: $SecondText;
+        font-family: "regular";
+        padding: 0 3%;
+      }
+      a {
+        font-family: "regular";
+        color: $PrimaryColor;
+        transition: 0.25s all ease-out;
+        padding: 0 3%;
+        svg {
+          margin-inline-start: 3%;
+        }
+        &:hover {
+          color: $PrimaryText;
+        }
+      }
+    }
+  }
+}
+
+//finish  single blog
 
 // Start reservation info
 .reservation_info {
@@ -287,7 +567,7 @@ ul {
         background-color: transparent;
         color: $PrimaryColor;
         border: 1px solid $PrimaryColor;
-        transition: .7s ease-in-out;
+        transition: 0.7s ease-in-out;
       }
     }
   }
@@ -391,5 +671,25 @@ ul {
   }
 }
 // End Doctors
+
+//start about us page
+.header_about_us{
+  padding: 5% 0;
+  position: relative;
+  h4{
+   font-size: 1.3rem;
+   color: $PrimaryText;
+   font-family: 'bold'
+  }
+  p{
+    font-size: .8rem;
+    color: $SecondText;
+    font-family: 'regular'
+  }
+  .coll_img{
+    
+  }
+}
+//finish about us page
 
 @import "./_responsive.scss";
